Small changes in layout and page titles
git-svn-id: svn+ssh://rubyforge.org/var/svn/acts-subversive@7 6f71b27d-5d96-4f06-bd10-7f0071265e15

--- a/doc/layout.css
+++ b/doc/layout.css
@@ -7,7 +7,7 @@ code
 {
 	display: block;
 	border: 1px solid #7F9DB9;
-	background-color: #ff9955;
+	background-color: #ffffff;
 	font-family: monospace;
 	width: 100%;
 	overflow: auto;
